# stratoclave

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  e2e-nightly.yml  lint.yml  secrets-scan.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.lambda  entrypoint.sh  main.py  permissions.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/billing/: ledger.py  ledger_projector.py  ledger_reconciler.py  pending_protocol.py
backend/bootstrap/: __init__.py  seed.py
backend/core/: constants.py  error_handler.py  logging.py  rate_limit.py  rate_limit_ddb.py  validation.py
backend/dynamo/: __init__.py  api_keys.py  client.py  credit_ledger.py  permissions.py  pricing_config.py  sso_nonces.py  sso_pre_registrations.py  tenant_budgets.py  tenants.py  trusted_accounts.py  ui_tickets.py  usage_logs.py  user_tenants.py  users.py
backend/middleware/: correlation.py
backend/migrations/: backfill_pool_headroom.py
backend/mvp/: __init__.py  _bedrock_clients.py  _budget_flow.py  _converse_core.py  _converse_types.py  _pipeline.py  admin_api_keys.py  admin_pricing.py  admin_routing.py  admin_sso_invites.py  admin_tenants.py  admin_trusted_accounts.py  admin_usage.py  admin_users.py  admin_vsr_config.py  anthropic.py  authz.py  billing_authorize.py  billing_read.py  chat_completions.py  cognito_admin.py  cognito_auth.py  deps.py  litellm_ingest.py  me.py  me_api_keys.py  models.py  openai_responses.py  pricing.py  reserve_oracle.py  sso_exchange.py  sso_gate.py  sso_sts.py  team_lead.py  ui_ticket.py  well_known.py
backend/mvp/_wire/: __init__.py  anthropic_wire.py
backend/mvp/learning/: __init__.py  certificate_cli.py  certificate_scheduler.py  certificate_store.py  decision_log.py  decision_log_cli.py  savings.py  savings_cli.py  signals.py  vsr_reconcile.py  vsr_reconcile_cli.py
backend/mvp/observability/: __init__.py  context.py  store.py
backend/mvp/routing/: __init__.py  breaker.py  chains.py  classify.py  clients.py  config.py  fault.py  infrarouter.py  model_resolver.py  quota.py  saar.py  types.py
backend/mvp/serving/: semantic_router.py  vllm.py
backend/mvp/sr/: CONTRACT.md  IMPLEMENTATION_PLAN.md  __init__.py  adapter.py  canary.py  decision_map.py  eval_client.py  hardening.py  observability.py  port.py  reservation.py  settle.py
backend/mvp/vsr/: client.py  config_store.py  shadow.py
backend/tests/: billing_guards.py  conftest.py  test_admin_creation_gate.py  test_admin_pool_budget.py  test_admin_pool_reconciliation.py  test_admin_pricing.py  test_anthropic_request_caps.py  test_anthropic_stream_offload.py  test_anthropic_wire_bytes.py  test_api_key_tombstone.py  test_api_keys.py  test_authz_lattice.py  test_backfill_pool_headroom.py  test_bedrock_client_timeouts.py  test_billing_authorize.py  test_billing_authorize_stateful.py  test_billing_differential.py  test_billing_differential_oracle.py  test_billing_formal_z3.py  test_billing_read.py  test_billing_stateful.py  test_billing_write_discipline.py  test_body_size_middleware.py  test_bootstrap_admin_password_not_logged.py  test_bootstrap_seed.py  test_budget_flow_disconnect.py  test_capability_role_and_permissions.py  test_capability_role_endpoint.py  test_certificate_store.py  test_chat_completions.py  test_content_conversion.py  test_converse_core_normalization.py  test_cors_validation.py  test_credit_ledger.py  test_credit_ledger_stateful.py  test_credit_reservation.py  test_decision_log.py  test_decision_log_properties.py  test_e2e_api_streaming.py  test_error_sanitization.py  (+82 more)
backend/tests/fakes/: fake_sr.py
backend/tests/scenarios/saar/: blog_scenarios.py  metrics.py  run.sh  test_blog_scenario_coverage.py
bench/ledger-latency/: bench_itemcount_spike.py  bench_live.py  bench_marker_shard_spike.py  bench_micro.py  bench_pending_spike.py  route_overhead.py  seed_tenants.py
bench/savings/: demo_certificate_seed.py  demo_offline.py  demo_workload.jsonl
cli/: .gitignore  Cargo.toml  README.md  audit.toml  build.rs  config.toml.example  policy.toml  policy.toml.example  rust-toolchain.toml  rustfmt.toml
cli/scripts/: generate-config.sh
cli/src/: client.rs  config.rs  main.rs  output.rs  policy.rs
cli/src/auth/: cognito_provider.rs  mod.rs  provider.rs  saml2aws_provider.rs  token.rs
cli/src/commands/: chat.rs  mod.rs  pipe.rs  setup.rs  ui.rs
cli/src/mvp/: admin.rs  admin_cmd.rs  api.rs  api_keys.rs  auth.rs  billing.rs  child_launcher.rs  claude_cmd.rs  codex_cmd.rs  config.rs  ephemeral_key.rs  mod.rs  sc_headers.rs  sso.rs  team_lead.rs  tokens.rs  usage.rs
cli/tests/: setup_e2e.rs
contracts/billing/: authorization_status.json  run_admin.json  run_tenant.json
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  CLI_GUIDE.md  CODEX_GUIDE.md  COWORK_INTEGRATION.md  DEPLOYMENT.md  EVIDENCE.md  GETTING_STARTED.md  SCOPE.md  VSR_CONFIG_CONTRACT.md
docs/benchmarks/: ledger-latency.md
docs/demo/: README.md  savings-certificate-sample.md  savings-vs-litellm.md
docs/design/: ledger-hot-path.md  pending-protocol.md  vsr-savings-certificate.md
docs/diagrams/: architecture.drawio  credit-reservation.drawio  request-routing.drawio  vouch-by-sts.drawio  zenn-savings-join.drawio  zenn-unified-ledger.drawio  zenn-vsr-trust-boundary.drawio
docs/ja/: ADMIN_GUIDE.md  (+7 more)
frontend/: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
iac/: .eslintrc.cjs  .gitignore  .prettierignore  README.md  cdk.json  deploy.sh  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
scenarios/: .gitignore  COVERAGE.md  GAPS.md  README.md  README_ja.md
scripts/: bootstrap-admin.sh  check-no-hardcoded-secrets.sh  docs-e2e.sh  install-git-hooks.sh  test-secrets-patterns.sh
(+163 files in other folders)
