[package]
name = "stratoclave"
version = "0.1.0"
edition = "2021"
description = "Stratoclave CLI - Cognito OIDC authentication client"

[[bin]]
name = "stratoclave"
path = "src/main.rs"

[dependencies]
# AWS credentials parsing
configparser = "3.1"
# TOML parsing
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "5"
anyhow = "1"
tiny_http = "0.12"
url = "2"
open = "5"
clap = { version = "4", features = ["derive"] }
rustyline = "14"
atty = "0.2"
# Phase S: AWS SSO / STS 経由ログイン用
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = "1"
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
http = "1"

[dev-dependencies]
# Phase 3 tests: focused on config TOML schema regression + CLI contracts.
# wiremock and assert_cmd will come in a follow-up PR covering auth/api-key flows.
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"

# Linter levels. v0.1.0 initial scope is minimal: only hard-safety rules.
# Style / visibility modernization (unreachable_pub, pedantic, nursery) will
# be enabled in a follow-up PR after the codebase is reviewed holistically.
[lints.rust]
# deny (not forbid) so that specific blocks can opt out with
# `#[allow(unsafe_code)]` when calling small libc FFI for tty detection etc.
unsafe_code = "deny"

[lints.clippy]
# Deny foot-guns:
mem_forget = "deny"
await_holding_lock = "deny"
# Warn-only reminders:
todo = "warn"
dbg_macro = "warn"
