[package]
name = "stratoclave"
version = "0.1.0"
edition = "2021"
description = "Stratoclave CLI - Cognito OIDC authentication client"

[[bin]]
name = "stratoclave"
path = "src/main.rs"

[dependencies]
# AWS credentials parsing
configparser = "3.1"
# TOML parsing
toml = "1.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
dirs = "6"
anyhow = "1"
tiny_http = "0.12"
url = "2"
urlencoding = "2"
open = "5"
clap = { version = "4", features = ["derive"] }
rustyline = "18"
atty = "0.2"
# Phase S: AWS SSO / STS 経由ログイン用
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = "1"
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
http = "1"

[dev-dependencies]
# Integration-test toolchain:
#  - wiremock for backend HTTP mocking (used by `setup` well-known discovery
#    and any future CLI -> backend flow tests).
#  - assert_cmd + predicates to drive the compiled binary end-to-end.
#  - tempfile to isolate HOME / config / token paths from the developer's
#    real `~/.stratoclave/`.
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"

# Linter levels. v0.1.0 initial scope is minimal: only hard-safety rules.
# Style / visibility modernization (unreachable_pub, pedantic, nursery) will
# be enabled in a follow-up PR after the codebase is reviewed holistically.
[lints.rust]
# deny (not forbid) so that specific blocks can opt out with
# `#[allow(unsafe_code)]` when calling small libc FFI for tty detection etc.
unsafe_code = "deny"

[lints.clippy]
# Deny foot-guns:
mem_forget = "deny"
await_holding_lock = "deny"
# Warn-only reminders:
todo = "warn"
dbg_macro = "warn"
